going to start lyf cycle hooks

--- a/force-app/main/default/lwc/fundamentals/fundamentals.html
+++ b/force-app/main/default/lwc/fundamentals/fundamentals.html
@@ -88,7 +88,8 @@
     <!-- CSS in lwc -->
     <lightning-card title="CSS in lwc">
         <div class="slds-align_absolute-center slds-var-m-around_medium">
-           
+           <h1>changing the lightning-button color</h1>
+           <lightning-button class="btn" label="change" title="change by js color"></lightning-button>
         </div>
     </lightning-card>
 </template>
