--- a/force-app/main/default/lwc/jsPractice/jsPractice.html
+++ b/force-app/main/default/lwc/jsPractice/jsPractice.html
@@ -6,9 +6,6 @@
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
-    <h1>lyf cycle demo</h1>
-    <lightning-button onclick={changeTemplate} label="change template" title="change template"></lightning-button>
-    <template if:true={isTrue}>
-        <c-child-lyf></c-child-lyf> 
-    </template>
+    <lightning-button></lightning-button>
+    
 </template>
