--- a/force-app/main/default/lwc/rtfPdfGeneration/rtfPdfGeneration.html
+++ b/force-app/main/default/lwc/rtfPdfGeneration/rtfPdfGeneration.html
@@ -1,3 +1,47 @@
+<!--
+  @description       : 
+  @author            : ChangeMeIn@UserSettingsUnder.SFDoc
+  @group             : 
+  @last modified on  : 05-01-2024
+  @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
+-->
 <template>
-    
+    <div class="container" style="background: white; padding: 16px; margin-top:10px; margin-bottom:10px">
+        <div style="margin-bottom: 16px;">
+            <img src={imageUrl} alt="logo" style="height: 40px; width:150px;">
+            <div style="display: inline-block; float:right;">
+                <div>Invoice #: {invoiceData.invoiceNo}</div>
+                <div>Created #: {invoiceData.invoiceCreated}</div>
+                <div>Due #: {invoiceData.invoiceDue}</div>
+            </div>
+        </div>
+        <div>
+            <div style="display:inline-block">
+                <div>{invoiceData.companyName}</div>
+                <div>{invoiceData.address1}</div>
+                <div>{invoiceData.address2}</div>
+            </div>
+            <div style="display:inline-block; float:right;">
+                <div>{clientData.client}</div>
+                <div>{clientData.username}</div>
+                <div>{clientData.email}</div>
+            </div>
+        </div>
+            <div style="background: #eee; margin:16px 0px; padding:8px;">
+                <div style="display:inline-block; "><strong>Services</strong></div>
+                <div style="display:inline-block; float:right;"><strong>Amount</strong></div>
+            </div>
+        <div>
+            <template iterator:it={services}>
+                <div key={it.value.name}>
+                    <div style="display:inline-block;">{it.value.name}</div>
+                    <div style="display:inline-block; float:right;">{it.value.amount}</div>
+                </div>
+                <div if:true={it.last} key={it.value.name}>
+                    <div style="display:inline-block; float:right; margin-bottom:10px"><strong>Total Amount:$ {totalAmount} </strong></div>
+                </div>
+            </template>
+        </div>
+    </div>
+    <lightning-button variant="brand" label="generate pdf" onclick={generatePdf}></lightning-button>
 </template>
