--- a/force-app/main/default/lwc/reuseableComponent/reuseableComponent.html
+++ b/force-app/main/default/lwc/reuseableComponent/reuseableComponent.html
@@ -2,9 +2,32 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 04-30-2024
+  @last modified on  : 05-02-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
-    
+  <article class="slds-card">
+    <div class="slds-card__header slds-grid">
+      <header class="slds-media slds-media_center slds-has-flexi-truncate">
+        <div class="slds-media__body">
+          <h2 class="slds-card__header-title">
+            <div class="slds-card__header-link slds-truncate" title="Accounts">
+              <slot name="title"></slot>
+            </div>
+          </h2>
+        </div>
+        <div class="slds-no-flex">
+          <button class="slds-button slds-button_neutral">
+            <slot name="actions"></slot>
+          </button>
+        </div>
+      </header>
+    </div>
+    <div class="slds-card__body slds-card__body_inner">
+      <slot></slot>
+    </div>
+    <footer class="slds-card__footer slds-hide" lwc:ref="footer">
+      <slot name="footer" onslotchange={handleSlotChange}></slot>
+    </footer>
+  </article>
 </template>
