--- a/force-app/main/default/lwc/carTile/carTile.html
+++ b/force-app/main/default/lwc/carTile/carTile.html
@@ -2,11 +2,11 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 04-29-2024
+  @last modified on  : 05-05-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
-    <div>
+    <div onclick={handleCarSelected}>
         <div class="content">
             <img src={car.Picture_Url__c} alt="car image" class="slds-align_absolute-center carImage">
             <div>
