--- a/force-app/main/default/lwc/navigationInLwc/navigationInLwc.html
+++ b/force-app/main/default/lwc/navigationInLwc/navigationInLwc.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 04-23-2024
+  @last modified on  : 05-02-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -16,5 +16,6 @@
         <lightning-button label="chatter page" variant="brand" title="chatter page" onclick={navigateToChatter}></lightning-button>
         <h1>click the button to go to new contact create</h1>
         <lightning-button label="new contact create" variant="brand" title="new contact create" onclick={navigateToNewRecord}></lightning-button>
+        <lightning-button label="Navigate to lwc" variant="brand" title="new contact create" onclick={navigateToLwc}></lightning-button>
     </lightning-card>
 </template>
