work on lwc zero to hero

--- a/force-app/main/default/lwc/c2pChild/c2pChild.html
+++ b/force-app/main/default/lwc/c2pChild/c2pChild.html
@@ -2,10 +2,13 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 04-22-2024
+  @last modified on  : 05-06-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
     <h1>this is child element</h1>
     <lightning-button label="child" variant="brand" onclick={handleClick}></lightning-button>
+    l
+    <lightning-button class="slds-var-m-top_medium" label="child" variant="brand" onclick={props.onclick}></lightning-button>
+    l
 </template>
