--- a/force-app/main/default/lwc/carCard/carCard.html
+++ b/force-app/main/default/lwc/carCard/carCard.html
@@ -2,27 +2,27 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 05-05-2024
+  @last modified on  : 05-08-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
-  <template if:true={recordId}>
-    <lightning-card icon-name="action:approval" size="xx-small" label="Car Car" title={carName}>
-      <img class="carImage" src={carPictureUrl} alt="carImage"/>
-      <lightning-record-view-form onload={handleRecordLoad} object-api-name={car} density="compact" record-id={recordId}>
-        <lightning-output-field field-name={categoryField}></lightning-output-field>
-        <lightning-output-field field-name={makeField}></lightning-output-field>
-        <lightning-output-field field-name={msrpField}></lightning-output-field>
-        <section>Other Features</section>
-        <lightning-output-field field-name={fuelField}></lightning-output-field>
-        <lightning-output-field field-name={seatsField}></lightning-output-field>
-        <lightning-output-field field-name={controlField}></lightning-output-field>
-      </lightning-record-view-form>
+    <div class="slds-m-horizontal_medium">
+        <lightning-card label={carName} icon-name="standard:apex_plugin">
+            <img src={image} alt="carImage"/>
+            <lightning-record-view-form object-api-name={car} record-id={recordId} density="compact" onload={handleRecordViewOnLoad}>
+                <lightning-output-field field-name={category}></lightning-output-field>
+                <lightning-output-field field-name={make}></lightning-output-field>
+                <lightning-output-field field-name={msrp}></lightning-output-field>
+                <section>Other Features</section>
+                <lightning-output-field field-name={fuel}></lightning-output-field>
+                <lightning-output-field field-name={seats}></lightning-output-field>
+                <lightning-output-field field-name={control}></lightning-output-field>
+            </lightning-record-view-form>
+        </lightning-card>
+    </div>
+   <template if:true={notAvailable}>
+    <lightning-card>
+        <img src="" alt="carImage">
     </lightning-card>
-  </template>
-  <template if:false={recordId}>
-    <lightning-card icon-name="action:approval" size="xx-small" label="Car Car" >
-      <img class="carImage" src="" alt="carImage"/>
-    </lightning-card>
-  </template>
+   </template>
 </template>
